--- a/old-shadow-0070/src/app/_components/styles/Footer.module.css
+++ b/old-shadow-0070/src/app/_components/styles/Footer.module.css
@@ -6,7 +6,7 @@
   color: rgb(255, 57, 57);;
   font-family: "Work Sans", sans-serif;
   width: 70vw;
-  margin-left: 15vw;
+ /* margin-left: 15vw;*/
   justify-content: center;
 }
 
@@ -16,6 +16,11 @@
   text-align: center;
   font-family: monospace;
   margin: 1em;
+}
+
+.nombre:hover {
+  color: rgb(100, 100, 100);
+  text-decoration: none;
 }
 
 .icono {
