--- a/old-shadow-0070/src/app/_components/styles/EnlaceProyecto.module.css
+++ b/old-shadow-0070/src/app/_components/styles/EnlaceProyecto.module.css
@@ -1,19 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .enlaceProyecto {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-decoration: none;
     color: white;
     width: 6vw;
     height: 6vw;
     text-align: center;
     font-family: "Work Sans", sans-serif;
-    font-size:.8em;
+    font-size:1vw;
+    line-height: 1.1em;
     margin: 1em;
     background-color: rgb(255, 57, 57);
-    padding: 1em;
+    padding: .5em;
 }
 
 .enlaceProyecto:hover {
