--- a/old-shadow-0070/src/app/_components/styles/Footer.module.css
+++ b/old-shadow-0070/src/app/_components/styles/Footer.module.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   color: rgb(255, 57, 57);;
   font-family: "Work Sans", sans-serif;
-  width: 70vw;
+  width: 100vw;
  /* margin-left: 15vw;*/
   justify-content: center;
 }
@@ -25,4 +25,6 @@
 
 .icono {
   margin-right: 5px;
+  width: 20px;
+  height: 20px;
 }
