--- a/old-shadow-0070/src/app/_components/styles/ProyectoCuerpo.module.css
+++ b/old-shadow-0070/src/app/_components/styles/ProyectoCuerpo.module.css
@@ -1,19 +1,23 @@
 .proyectoCuerpo {
-    width: 25vw;
+    width: 24vw;
     position: fixed;
-    top: 4em;
-    right: 4vw;
+    top: 5em;
+    right: 6vw;
     color: var(--rojofuente);
+     text-align: center;
 }
 
 .titulo {
     font-size: 1.2em;
     font-weight: 400;
-    text-align: center;
+   
+}
+
+.año {
+    font-size: 0.9em;
 }
 
 .descripcion {
-    text-align: center;
     margin: 1em 0;
     font-size: .9em;
 }
