--- a/old-shadow-0070/src/app/_components/styles/Footer.module.css
+++ b/old-shadow-0070/src/app/_components/styles/Footer.module.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .footer {
   display: flex;
   flex-direction: row;
-  color: rgb(255, 57, 57);;
+  color: rgb(255, 57, 57);
   font-family: "Work Sans", sans-serif;
-  width: 100vw;
- /* margin-left: 15vw;*/
+  width: 98vw;
+  /* margin-left: 15vw;*/
   justify-content: center;
 }
 
@@ -27,4 +27,10 @@
   margin-right: 5px;
   width: 20px;
   height: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    width: 98vw;
+  }
 }
