--- a/old-shadow-0070/src/app/globals.css
+++ b/old-shadow-0070/src/app/globals.css
@@ -1,12 +1,23 @@
-@import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+/* Tamaños Pantallas 🖥️ 📺 📱
+  --minCelular: 576px;
+  --minTablet: 768px;
+  --minPantalla: 992px;
+  --minPantallaGrande: 1200px;
+  --minPantallaGigante: 1920px;
+  */
 
+@import "tailwindcss";
 
 :root {
   --background: #5c76c6;
   --foreground: #171717;
   --rojofuente: rgb(255, 57, 57);
+
+  --minCelular: 576px;
+  --minTablet: 768px;
+  --minPantalla: 992px;
+  --minPantallaGrande: 1200px;
+  --minPantallaGigante: 1920px;
 }
 
 @theme inline {
@@ -24,8 +35,8 @@
 }
 
 body {
-  background-image: url('/background.png');
- /*background: var(--background);*/
+  background-image: url("/background.png");
+  /*background: var(--background);*/
   color: var(--foreground);
   font-family: "Work Sans", sans-serif;
   font-weight: 300;
@@ -36,13 +47,13 @@ body {
 }
 
 .enlaces {
- padding: 4em;
+  padding: 4em;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   width: 70vw;
-   flex-wrap: wrap;
+  flex-wrap: wrap;
   /* margin-left: 15vw;*/
 
   .elemento {
@@ -55,8 +66,8 @@ body {
 .info {
   color: var(--rojofuente);
   text-align: center;
-  width: 100vw;
-  margin: 0 0 2em 0;
+  width: 98vw;
+  margin: 3em 0 2em 0;
 
   .nombre {
     font-size: 1.2em;
@@ -64,20 +75,22 @@ body {
 }
 
 .paginaProyecto {
-p {
-  margin-top: 1em;
-}
+  p {
+    margin-top: 1em;
+  }
 
-ul {
-  list-style: circle;
-}
+  ul {
+    list-style: circle;
+  }
 
-  a, a:visited, a:active{
-   color: var(--rojofuente);
+  a,
+  a:visited,
+  a:active {
+    color: var(--rojofuente);
   }
 
   padding: 0 2em;
-  
+
   .titulo {
     text-align: center;
     color: var(--rojofuente);
@@ -99,11 +112,17 @@ ul {
   }
   .enlaceDescarga {
     text-align: right;
-    font-size: .9em;
+    font-size: 0.9em;
     margin-right: 3em;
   }
   .texto {
     width: 70vw;
     margin: 3em 3em;
+  }
+}
+
+@media screen and (min-width: --minTablet) {
+  .info {
+    margin: 0 0 2em 0;
   }
 }
